--- a/2020-alpha/element/columns/css/columns.css
+++ b/2020-alpha/element/columns/css/columns.css
@@ -37,15 +37,6 @@
   vertical-align: top;
   font-size: 0;
 }
-.oneColumn.alignLeft, .twoColumn.alignLeft, .threeColumn.alignLeft, .fourColumn.alignLeft {
-  text-align: left;
-}
-.oneColumn.alignCenter, .twoColumn.alignCenter, .threeColumn.alignCenter, .fourColumn.alignCenter {
-  text-align: center;
-}
-.oneColumn.alignRight, .twoColumn.alignRight, .threeColumn.alignRight, .fourColumn.alignRight {
-  text-align: right;
-}
 .oneColumn > *, .twoColumn > *, .threeColumn > *, .fourColumn > * {
   display: inline-block;
   vertical-align: top;
